# sentinel-cli

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE-REVIEW.md  INSTALL.md  LICENSE  NOTICE  OAUTH-CLAUDE.md  PLAN.md  README.md  ROADMAP-10X.md  ROADMAP-5X.md  ROADMAP-V2.md  ROADMAP.md  SETUP.md  _audit_dump.txt  index.html  install.bat  install.ps1  package-lock.json  package.json  project_state.md  tsconfig.json  tsup.config.ts  uninstall.bat
config/: default.json
docs/: agentic-coding.md  automation-loop.md  autopilot.md  ci-examples.md
evals/: README.md  run.mjs  tasks.json
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src-tauri/: Cargo.toml  README.md  gen-icons.cjs  tauri.conf.json
gui/src-tauri/src/: main.rs
scripts/: add-shebang.cjs  copy-builtins.cjs
src/: cli.ts  index.ts
tests/: about.test.ts  agent-integration.test.ts  agent-rounds.test.ts  agent-runner-compaction.test.ts  agent-runner.test.ts  agent-team.test.ts  anthropic-stream.test.ts  approval-diff.test.ts  atomic-write.test.ts  attachments-dataurl.test.ts  attachments.test.ts  autopilot-session.test.ts  autopilot.test.ts  background.test.ts  bash-sandbox.test.ts  bash-tool.test.ts  brain-recall.test.ts  browser.test.ts  budget-enforcer.test.ts  budget-gate.test.ts  cards.test.ts  chat-renderer.test.ts  checkpoints.test.ts  classify-turn.test.ts  command-catalog.test.ts  command-palette.test.ts  command-search.test.ts  commands-info.test.ts  commands.test.ts  compact-strategy.test.ts  compression.test.ts  context.test.ts  (+100 more)
(+239 files in other folders)
